# Financial-API

./: .env.example  .gitignore  AGENTS.md  README.md  bootstrap.py  bootstrap.sh  pyproject.toml
examples/: 01_quickstart.py  02_cross_section.py  03_fundamentals_join.py  README.md
examples/inspirations/: README.md
examples/inspirations/01-stock-overview/: README.md  example.html
examples/inspirations/02-financial-health/: README.md  example.html
examples/inspirations/03-index-constituents/: README.md  example.html
examples/inspirations/04-limit-up-market/: README.md  example.html
examples/inspirations/05-watchlist-anomalies/: README.md  example.html
marketdb/: __init__.py  _version.py  auth.py  batch.py  cli.py  config.py  db.py  schema.py  sdk.py  update_notice.py
marketdb/calculations/: __init__.py  adjustment.py
marketdb/checks/: __init__.py  freshness.py  quality.py
marketdb/importers/: __init__.py  parquet.py
marketdb/providers/: __init__.py  dump.py  rest.py
marketdb/sql/: schema.sql  views.sql
marketdb/updaters/: __init__.py  auto.py  daily.py
skills/financial-api/: SKILL.md
tests/: conftest.py  test_adjustment.py  test_auto_sync.py  test_bootstrap_dual_path.py  test_dump_cache_paths.py  test_dump_downloader.py  test_freshness.py  test_fuyao_new_capabilities.py  test_importer.py  test_importer_overwrite.py  test_inspirations.py  test_quality.py  test_require_api_key.py  test_schema.py  test_update_notice.py  test_update_notice_integration.py
toolkit/: README.md
toolkit/fuyao/: README.md
toolkit/marketdb/: README.md
(+14 files in other folders)
